--- a/lib/_dropdowns.scss
+++ b/lib/_dropdowns.scss
@@ -42,16 +42,16 @@
   position: absolute;
   top: 100%;
   left: 0;
-  z-index: $zindexDropdown;
+  z-index: $zindex-dropdown;
   display: none; // none by default, but block on "open" of the menu
   float: left;
   min-width: 160px;
   padding: 5px 0;
   margin: 2px 0 0; // override default ul
   list-style: none;
-  background-color: $dropdownBackground;
+  background-color: $dropdown-bg;
   border: 1px solid #ccc; // Fallback for IE7-8
-  border: 1px solid $dropdownBorder;
+  border: 1px solid $dropdown-border;
   *border-right-width: 2px;
   *border-bottom-width: 2px;
   @include border-radius(6px);
@@ -68,7 +68,7 @@
 
   // Dividers (basically an hr) within the dropdown
   .divider {
-    @include nav-divider($dropdownDividerTop, $dropdownDividerBottom);
+    @include nav-divider($dropdown-divider-top-bg, $dropdown-divider-bottom-bg);
   }
 
   // Links within the dropdown menu
@@ -77,8 +77,8 @@
     padding: 3px 20px;
     clear: both;
     font-weight: normal;
-    line-height: $baseLineHeight;
-    color: $dropdownLinkColor;
+    line-height: $line-height-base;
+    color: $dropdown-link-color;
     white-space: nowrap;
   }
 }
@@ -90,8 +90,8 @@
 .dropdown-submenu:hover > a,
 .dropdown-submenu:focus > a {
   text-decoration: none;
-  color: $dropdownLinkColorHover;
-  @include gradient-vertical($dropdownLinkBackgroundHover, darken($dropdownLinkBackgroundHover, 5%));
+  color: $dropdown-link-hover-color;
+  @include gradient-vertical($dropdown-link-hover-bg, darken($dropdown-link-hover-bg, 5%));
 }
 
 // Active state
@@ -99,10 +99,10 @@
 .dropdown-menu > .active > a,
 .dropdown-menu > .active > a:hover,
 .dropdown-menu > .active > a:focus {
-  color: $dropdownLinkColorActive;
+  color: $dropdown-link-active-color;
   text-decoration: none;
   outline: 0;
-  @include gradient-vertical($dropdownLinkBackgroundActive, darken($dropdownLinkBackgroundActive, 5%));
+  @include gradient-vertical($dropdown-link-active-bg, darken($dropdown-link-active-bg, 5%));
 }
 
 // Disabled state
@@ -111,7 +111,7 @@
 .dropdown-menu > .disabled > a,
 .dropdown-menu > .disabled > a:hover,
 .dropdown-menu > .disabled > a:focus {
-  color: $grayLight;
+  color: $gray-light;
 }
 // Nuke hover/focus effects
 .dropdown-menu > .disabled > a:hover,
@@ -128,7 +128,7 @@
 .open {
   // IE7's z-index only goes to the nearest positioned ancestor, which would
   // make the menu appear below buttons that appeared later on the page
-  *z-index: $zindexDropdown;
+  *z-index: $zindex-dropdown;
 
   & > .dropdown-menu {
     display: block;
@@ -143,7 +143,7 @@
   right: 0;
   bottom: 0;
   top: 0;
-  z-index: $zindexDropdown - 10;
+  z-index: $zindex-dropdown - 10;
 }
 
 // Right aligned dropdowns
@@ -209,12 +209,12 @@
   border-color: transparent;
   border-style: solid;
   border-width: 5px 0 5px 5px;
-  border-left-color: darken($dropdownBackground, 20%);
+  border-left-color: darken($dropdown-bg, 20%);
   margin-top: 5px;
   margin-right: -10px;
 }
 .dropdown-submenu:hover > a:after {
-  border-left-color: $dropdownLinkColorHover;
+  border-left-color: $dropdown-link-hover-color;
 }
 
 // Left aligned submenus
@@ -244,5 +244,5 @@
 .typeahead {
   z-index: 1051;
   margin-top: 2px; // give it some space to breathe
-  @include border-radius($baseBorderRadius);
+  @include border-radius($border-radius-base);
 }
