--- a/lib/_responsive-navbar.scss
+++ b/lib/_responsive-navbar.scss
@@ -5,7 +5,7 @@
 
 // TABLETS AND BELOW
 // -----------------
-@media (max-width: $navbarCollapseWidth) {
+@media (max-width: $navbar-collapse-width) {
 
   // UNFIX THE TOPBAR
   // ----------------
@@ -19,10 +19,10 @@
     position: static;
   }
   .navbar-fixed-top {
-    margin-bottom: $baseLineHeight;
+    margin-bottom: $line-height-base;
   }
   .navbar-fixed-bottom {
-    margin-top: $baseLineHeight;
+    margin-top: $line-height-base;
   }
   .navbar-fixed-top .navbar-inner,
   .navbar-fixed-bottom .navbar-inner {
@@ -48,7 +48,7 @@
   // Block-level the nav
   .nav-collapse .nav {
     float: none;
-    margin: 0 0 ($baseLineHeight / 2);
+    margin: 0 0 ($line-height-base / 2);
   }
   .nav-collapse .nav > li {
     float: none;
@@ -60,7 +60,7 @@
     display: none;
   }
   .nav-collapse .nav .nav-header {
-    color: $navbarText;
+    color: $navbar-color;
     text-shadow: none;
   }
   // Nav and dropdown links in navbar
@@ -68,14 +68,14 @@
   .nav-collapse .dropdown-menu a {
     padding: 9px 15px;
     font-weight: bold;
-    color: $navbarLinkColor;
+    color: $navbar-link-color;
     @include border-radius(3px);
   }
   // Buttons
   .nav-collapse .btn {
     padding: 4px 10px 4px;
     font-weight: normal;
-    @include border-radius($baseBorderRadius);
+    @include border-radius($border-radius-base);
   }
   .nav-collapse .dropdown-menu li + li a {
     margin-bottom: 2px;
@@ -84,17 +84,17 @@
   .nav-collapse .nav > li > a:focus,
   .nav-collapse .dropdown-menu a:hover,
   .nav-collapse .dropdown-menu a:focus {
-    background-color: $navbarBackground;
+    background-color: $navbar-bg;
   }
   .navbar-inverse .nav-collapse .nav > li > a,
   .navbar-inverse .nav-collapse .dropdown-menu a {
-    color: $navbarInverseLinkColor;
+    color: $navbar-inverse-link-color;
   }
   .navbar-inverse .nav-collapse .nav > li > a:hover,
   .navbar-inverse .nav-collapse .nav > li > a:focus,
   .navbar-inverse .nav-collapse .dropdown-menu a:hover,
   .navbar-inverse .nav-collapse .dropdown-menu a:focus {
-    background-color: $navbarInverseBackground;
+    background-color: $navbar-inverse-bg;
   }
   // Buttons in the navbar
   .nav-collapse.in .btn-group {
@@ -137,16 +137,16 @@
   .nav-collapse .navbar-form,
   .nav-collapse .navbar-search {
     float: none;
-    padding: ($baseLineHeight / 2) 15px;
-    margin: ($baseLineHeight / 2) 0;
-    border-top: 1px solid $navbarBackground;
-    border-bottom: 1px solid $navbarBackground;
+    padding: ($line-height-base / 2) 15px;
+    margin: ($line-height-base / 2) 0;
+    border-top: 1px solid $navbar-bg;
+    border-bottom: 1px solid $navbar-bg;
     @include box-shadow(inset 0 1px 0 rgba(255,255,255,.1), 0 1px 0 rgba(255,255,255,.1));
   }
   .navbar-inverse .nav-collapse .navbar-form,
   .navbar-inverse .nav-collapse .navbar-search {
-    border-top-color: $navbarInverseBackground;
-    border-bottom-color: $navbarInverseBackground;
+    border-top-color: $navbar-inverse-bg;
+    border-bottom-color: $navbar-inverse-bg;
   }
   // Pull right (secondary) nav content
   .navbar .nav-collapse .nav.pull-right {
@@ -178,7 +178,7 @@
 // DEFAULT DESKTOP
 // ---------------
 
-@media (min-width: $navbarCollapseDesktopWidth) {
+@media (min-width: $navbar-collapse-width-desktop) {
 
   // Required to make the collapsing navbar work on regular desktops
   .nav-collapse.collapse {
