--- a/lib/_tables.scss
+++ b/lib/_tables.scss
@@ -8,7 +8,7 @@
 
 table {
   max-width: 100%;
-  background-color: $tableBackground;
+  background-color: $table-bg;
   border-collapse: collapse;
   border-spacing: 0;
 }
@@ -18,15 +18,15 @@ table {
 
 .table {
   width: 100%;
-  margin-bottom: $baseLineHeight;
+  margin-bottom: $line-height-base;
   // Cells
   th,
   td {
     padding: 8px;
-    line-height: $baseLineHeight;
+    line-height: $line-height-base;
     text-align: left;
     vertical-align: top;
-    border-top: 1px solid $tableBorder;
+    border-top: 1px solid $table-border-color;
   }
   th {
     font-weight: bold;
@@ -46,12 +46,12 @@ table {
   }
   // Account for multiple tbody instances
   tbody + tbody {
-    border-top: 2px solid $tableBorder;
+    border-top: 2px solid $table-border-color;
   }
 
   // Nesting
   .table {
-    background-color: $bodyBackground;
+    background-color: $body-bg;
   }
 }
 
@@ -72,14 +72,14 @@ table {
 // ----------------
 
 .table-bordered {
-  border: 1px solid $tableBorder;
+  border: 1px solid $table-border-color;
   border-collapse: separate; // Done so we can round those corners!
   *border-collapse: collapse; // IE7 can't round corners anyway
   border-left: 0;
-  @include border-radius($baseBorderRadius);
+  @include border-radius($border-radius-base);
   th,
   td {
-    border-left: 1px solid $tableBorder;
+    border-left: 1px solid $table-border-color;
   }
   // Prevent a double border
   caption + thead tr:first-child th,
@@ -97,13 +97,13 @@ table {
   thead:first-child tr:first-child > th:first-child,
   tbody:first-child tr:first-child > td:first-child,
   tbody:first-child tr:first-child > th:first-child {
-    @include border-top-left-radius($baseBorderRadius);
+    @include border-top-left-radius($border-radius-base);
   }
   // For last th/td in the first row in the first thead or tbody
   thead:first-child tr:first-child > th:last-child,
   tbody:first-child tr:first-child > td:last-child,
   tbody:first-child tr:first-child > th:last-child {
-    @include border-top-right-radius($baseBorderRadius);
+    @include border-top-right-radius($border-radius-base);
   }
   // For first th/td (can be either) in the last row in the last thead, tbody, and tfoot
   thead:last-child tr:last-child > th:first-child,
@@ -111,7 +111,7 @@ table {
   tbody:last-child tr:last-child > th:first-child,
   tfoot:last-child tr:last-child > td:first-child,
   tfoot:last-child tr:last-child > th:first-child {
-    @include border-bottom-left-radius($baseBorderRadius);
+    @include border-bottom-left-radius($border-radius-base);
   }
   // For last th/td (can be either) in the last row in the last thead, tbody, and tfoot
   thead:last-child tr:last-child > th:last-child,
@@ -119,7 +119,7 @@ table {
   tbody:last-child tr:last-child > th:last-child,
   tfoot:last-child tr:last-child > td:last-child,
   tfoot:last-child tr:last-child > th:last-child {
-    @include border-bottom-right-radius($baseBorderRadius);
+    @include border-bottom-right-radius($border-radius-base);
   }
 
   // Clear border-radius for first and last td in the last row in the last tbody for table with tfoot
@@ -135,13 +135,13 @@ table {
   caption + tbody tr:first-child td:first-child,
   colgroup + thead tr:first-child th:first-child,
   colgroup + tbody tr:first-child td:first-child {
-    @include border-top-left-radius($baseBorderRadius);
+    @include border-top-left-radius($border-radius-base);
   }
   caption + thead tr:first-child th:last-child,
   caption + tbody tr:first-child td:last-child,
   colgroup + thead tr:first-child th:last-child,
   colgroup + tbody tr:first-child td:last-child {
-    @include border-top-right-radius($baseBorderRadius);
+    @include border-top-right-radius($border-radius-base);
   }
 
 }
@@ -157,7 +157,7 @@ table {
   tbody {
     > tr:nth-child(odd) > td,
     > tr:nth-child(odd) > th {
-      background-color: $tableBackgroundAccent;
+      background-color: $table-accent-bg;
     }
   }
 }
@@ -170,7 +170,7 @@ table {
   tbody {
     tr:hover > td,
     tr:hover > th {
-      background-color: $tableBackgroundHover;
+      background-color: $table-hover-bg;
     }
   }
 }
@@ -205,31 +205,31 @@ table th[class*="span"],
 
 .table tbody tr {
   &.success > td {
-    background-color: $successBackground;
+    background-color: $state-success-bg;
   }
   &.error > td {
-    background-color: $errorBackground;
+    background-color: $state-error-bg;
   }
   &.warning > td {
-    background-color: $warningBackground;
+    background-color: $state-warning-bg;
   }
   &.info > td {
-    background-color: $infoBackground;
+    background-color: $state-info-bg;
   }
 }
 
 // Hover states for .table-hover
 .table-hover tbody tr {
   &.success:hover > td {
-    background-color: darken($successBackground, 5%);
+    background-color: darken($state-success-bg, 5%);
   }
   &.error:hover > td {
-    background-color: darken($errorBackground, 5%);
+    background-color: darken($state-error-bg, 5%);
   }
   &.warning:hover > td {
-    background-color: darken($warningBackground, 5%);
+    background-color: darken($state-warning-bg, 5%);
   }
   &.info:hover > td {
-    background-color: darken($infoBackground, 5%);
+    background-color: darken($state-info-bg, 5%);
   }
 }
