--- a/lib/_alerts.scss
+++ b/lib/_alerts.scss
@@ -8,16 +8,16 @@
 
 .alert {
   padding: 8px 35px 8px 14px;
-  margin-bottom: $baseLineHeight;
+  margin-bottom: $line-height-base;
   text-shadow: 0 1px 0 rgba(255,255,255,.5);
-  background-color: $warningBackground;
-  border: 1px solid $warningBorder;
-  @include border-radius($baseBorderRadius);
+  background-color: $state-warning-bg;
+  border: 1px solid $state-warning-border;
+  @include border-radius($border-radius-base);
 }
 .alert,
 .alert h4 {
-  // Specified for the h4 to prevent conflicts of changing $headingsColor
-  color: $warningText;
+  // Specified for the h4 to prevent conflicts of changing $headings-color
+  color: $state-warning-text;
 }
 .alert h4 {
   margin: 0;
@@ -28,7 +28,7 @@
   position: relative;
   top: -2px;
   right: -21px;
-  line-height: $baseLineHeight;
+  line-height: $line-height-base;
 }
 
 
@@ -36,30 +36,30 @@
 // -------------------------
 
 .alert-success {
-  background-color: $successBackground;
-  border-color: $successBorder;
-  color: $successText;
+  background-color: $state-success-bg;
+  border-color: $state-success-border;
+  color: $state-success-text;
 }
 .alert-success h4 {
-  color: $successText;
+  color: $state-success-text;
 }
 .alert-danger,
 .alert-error {
-  background-color: $errorBackground;
-  border-color: $errorBorder;
-  color: $errorText;
+  background-color: $state-error-bg;
+  border-color: $state-error-border;
+  color: $state-error-text;
 }
 .alert-danger h4,
 .alert-error h4 {
-  color: $errorText;
+  color: $state-error-text;
 }
 .alert-info {
-  background-color: $infoBackground;
-  border-color: $infoBorder;
-  color: $infoText;
+  background-color: $state-info-bg;
+  border-color: $state-info-border;
+  color: $state-info-text;
 }
 .alert-info h4 {
-  color: $infoText;
+  color: $state-info-text;
 }
 
 
