--- a/lib/_breadcrumbs.scss
+++ b/lib/_breadcrumbs.scss
@@ -5,10 +5,10 @@
 
 .breadcrumb {
   padding: 8px 15px;
-  margin: 0 0 $baseLineHeight;
+  margin: 0 0 $line-height-base;
   list-style: none;
   background-color: #f5f5f5;
-  @include border-radius($baseBorderRadius);
+  @include border-radius($border-radius-base);
   > li {
     display: inline-block;
     @include ie7-inline-block();
@@ -19,6 +19,6 @@
     }
   }
   .active {
-    color: $grayLight;
+    color: $gray-light;
   }
 }
