--- a/lib/_button-groups.scss
+++ b/lib/_button-groups.scss
@@ -22,8 +22,8 @@
 // Optional: Group multiple button groups together for a toolbar
 .btn-toolbar {
   font-size: 0; // Hack to remove whitespace that results from using inline-block
-  margin-top: $baseLineHeight / 2;
-  margin-bottom: $baseLineHeight / 2;
+  margin-top: $line-height-base / 2;
+  margin-bottom: $line-height-base / 2;
   > .btn + .btn,
   > .btn-group + .btn,
   > .btn + .btn-group {
@@ -42,42 +42,42 @@
 .btn-group > .btn,
 .btn-group > .dropdown-menu,
 .btn-group > .popover {
-  font-size: $baseFontSize; // redeclare as part 2 of font-size inline-block hack
+  font-size: $font-size-base; // redeclare as part 2 of font-size inline-block hack
 }
 
 // Reset fonts for other sizes
 .btn-group > .btn-mini {
-  font-size: $fontSizeMini;
+  font-size: $font-size-mini;
 }
 .btn-group > .btn-small {
-  font-size: $fontSizeSmall;
+  font-size: $font-size-small;
 }
 .btn-group > .btn-large {
-  font-size: $fontSizeLarge;
+  font-size: $font-size-large;
 }
 
 // Set corners individual because sometimes a single button can be in a .btn-group and we need :first-child and :last-child to both match
 .btn-group > .btn:first-child {
   margin-left: 0;
-  @include border-top-left-radius($baseBorderRadius);
-  @include border-bottom-left-radius($baseBorderRadius);
+  @include border-top-left-radius($border-radius-base);
+  @include border-bottom-left-radius($border-radius-base);
 }
 // Need .dropdown-toggle since :last-child doesn't apply given a .dropdown-menu immediately after it
 .btn-group > .btn:last-child,
 .btn-group > .dropdown-toggle {
-  @include border-top-right-radius($baseBorderRadius);
-  @include border-bottom-right-radius($baseBorderRadius);
+  @include border-top-right-radius($border-radius-base);
+  @include border-bottom-right-radius($border-radius-base);
 }
 // Reset corners for large buttons
 .btn-group > .btn.large:first-child {
   margin-left: 0;
-  @include border-top-left-radius($borderRadiusLarge);
-  @include border-bottom-left-radius($borderRadiusLarge);
+  @include border-top-left-radius($border-radius-large);
+  @include border-bottom-left-radius($border-radius-large);
 }
 .btn-group > .btn.large:last-child,
 .btn-group > .large.dropdown-toggle {
-  @include border-top-right-radius($borderRadiusLarge);
-  @include border-bottom-right-radius($borderRadiusLarge);
+  @include border-top-right-radius($border-radius-large);
+  @include border-bottom-right-radius($border-radius-large);
 }
 
 // On hover/focus/active, bring the proper btn to front
@@ -135,25 +135,25 @@
 
   // Keep the hover's background when dropdown is open
   .btn.dropdown-toggle {
-    background-color: $btnBackgroundHighlight;
+    background-color: $btn-default-highlight-bg;
   }
   .btn-primary.dropdown-toggle {
-    background-color: $btnPrimaryBackgroundHighlight;
+    background-color: $btn-primary-highlight-bg;
   }
   .btn-warning.dropdown-toggle {
-    background-color: $btnWarningBackgroundHighlight;
+    background-color: $btn-warning-highlight-bg;
   }
   .btn-danger.dropdown-toggle {
-    background-color: $btnDangerBackgroundHighlight;
+    background-color: $btn-danger-highlight-bg;
   }
   .btn-success.dropdown-toggle {
-    background-color: $btnSuccessBackgroundHighlight;
+    background-color: $btn-success-highlight-bg;
   }
   .btn-info.dropdown-toggle {
-    background-color: $btnInfoBackgroundHighlight;
+    background-color: $btn-info-highlight-bg;
   }
   .btn-inverse.dropdown-toggle {
-    background-color: $btnInverseBackgroundHighlight;
+    background-color: $btn-inverse-highlight-bg;
   }
 }
 
@@ -216,14 +216,14 @@
   margin-top: -1px;
 }
 .btn-group-vertical > .btn:first-child {
-  @include border-radius($baseBorderRadius $baseBorderRadius 0 0);
+  @include border-radius($border-radius-base $border-radius-base 0 0);
 }
 .btn-group-vertical > .btn:last-child {
-  @include border-radius(0 0 $baseBorderRadius $baseBorderRadius);
+  @include border-radius(0 0 $border-radius-base $border-radius-base);
 }
 .btn-group-vertical > .btn-large:first-child {
-  @include border-radius($borderRadiusLarge $borderRadiusLarge 0 0);
+  @include border-radius($border-radius-large $border-radius-large 0 0);
 }
 .btn-group-vertical > .btn-large:last-child {
-  @include border-radius(0 0 $borderRadiusLarge $borderRadiusLarge);
+  @include border-radius(0 0 $border-radius-large $border-radius-large);
 }
