--- a/lib/_code.scss
+++ b/lib/_code.scss
@@ -8,8 +8,8 @@ code,
 pre {
   padding: 0 3px 2px;
   @include font-family-monospace;
-  font-size: $baseFontSize - 2;
-  color: $grayDark;
+  font-size: $font-size-base - 2;
+  color: $gray-dark;
   @include border-radius(3px);
 }
 
@@ -25,10 +25,10 @@ code {
 // Blocks of code
 pre {
   display: block;
-  padding: ($baseLineHeight - 1) / 2;
-  margin: 0 0 $baseLineHeight / 2;
-  font-size: $baseFontSize - 1; // 14px to 13px
-  line-height: $baseLineHeight;
+  padding: ($line-height-base - 1) / 2;
+  margin: 0 0 $line-height-base / 2;
+  font-size: $font-size-base - 1; // 14px to 13px
+  line-height: $line-height-base;
   word-break: break-all;
   word-wrap: break-word;
   white-space: pre;
@@ -36,11 +36,11 @@ pre {
   background-color: #f5f5f5;
   border: 1px solid #ccc; // fallback for IE7-8
   border: 1px solid rgba(0,0,0,.15);
-  @include border-radius($baseBorderRadius);
+  @include border-radius($border-radius-base);
 
   // Make prettyprint styles more spaced out for readability
   &.prettyprint {
-    margin-bottom: $baseLineHeight;
+    margin-bottom: $line-height-base;
   }
 
   // Account for some code outputs that place code tags in pre tags
