--- a/lib/_hero-unit.scss
+++ b/lib/_hero-unit.scss
@@ -8,18 +8,18 @@
   margin-bottom: 30px;
   font-size: 18px;
   font-weight: 200;
-  line-height: $baseLineHeight * 1.5;
-  color: $heroUnitLeadColor;
-  background-color: $heroUnitBackground;
+  line-height: $line-height-base * 1.5;
+  color: $hero-unit-lead-color;
+  background-color: $hero-unit-bg;
   @include border-radius(6px);
   h1 {
     margin-bottom: 0;
     font-size: 60px;
     line-height: 1;
-    color: $heroUnitHeadingColor;
+    color: $hero-unit-heading-color;
     letter-spacing: -1px;
   }
   li {
-    line-height: $baseLineHeight * 1.5; // Reset since we specify in type.scss
+    line-height: $line-height-base * 1.5; // Reset since we specify in type.scss
   }
 }
