--- a/lib/_navbar.scss
+++ b/lib/_navbar.scss
@@ -9,7 +9,7 @@
 // Base class and wrapper
 .navbar {
   overflow: visible;
-  margin-bottom: $baseLineHeight;
+  margin-bottom: $line-height-base;
 
   // Fix for IE7's bad z-indexing so dropdowns don't appear below content that follows the navbar
   *position: relative;
@@ -19,12 +19,12 @@
 // Inner for background effects
 // Gradient is applied to its own element because overflow visible is not honored by IE when filter is present
 .navbar-inner {
-  min-height: $navbarHeight;
+  min-height: $navbar-height;
   padding-left:  20px;
   padding-right: 20px;
-  @include gradient-vertical($navbarBackgroundHighlight, $navbarBackground);
-  border: 1px solid $navbarBorder;
-  @include border-radius($baseBorderRadius);
+  @include gradient-vertical($navbar-bg-highlight, $navbar-bg);
+  border: 1px solid $navbar-border;
+  @include border-radius($border-radius-base);
   @include box-shadow(0 1px 4px rgba(0,0,0,.065));
 
   // Prevent floats from breaking the navbar
@@ -49,13 +49,13 @@
 .navbar .brand {
   float: left;
   display: block;
-  // Vertically center the text given $navbarHeight
-  padding: (($navbarHeight - $baseLineHeight) / 2) 20px (($navbarHeight - $baseLineHeight) / 2);
+  // Vertically center the text given $navbar-height
+  padding: (($navbar-height - $line-height-base) / 2) 20px (($navbar-height - $line-height-base) / 2);
   margin-left: -20px; // negative indent to left-align the text down the page
   font-size: 20px;
   font-weight: 200;
-  color: $navbarBrandColor;
-  text-shadow: 0 1px 0 $navbarBackgroundHighlight;
+  color: $navbar-default-brand-color;
+  text-shadow: 0 1px 0 $navbar-bg-highlight;
   &:hover,
   &:focus {
     text-decoration: none;
@@ -66,27 +66,27 @@
 // -------------------------
 .navbar-text {
   margin-bottom: 0;
-  line-height: $navbarHeight;
-  color: $navbarText;
+  line-height: $navbar-height;
+  color: $navbar-color;
 }
 
 // Janky solution for now to account for links outside the .nav
 // -------------------------
 .navbar-link {
-  color: $navbarLinkColor;
+  color: $navbar-link-color;
   &:hover,
   &:focus {
-    color: $navbarLinkColorHover;
+    color: $navbar-link-hover-color;
   }
 }
 
 // Dividers in navbar
 // -------------------------
 .navbar .divider-vertical {
-  height: $navbarHeight;
+  height: $navbar-height;
   margin: 0 9px;
-  border-left: 1px solid $navbarBackground;
-  border-right: 1px solid $navbarBackgroundHighlight;
+  border-left: 1px solid $navbar-bg;
+  border-right: 1px solid $navbar-bg-highlight;
 }
 
 // Buttons in navbar
@@ -174,7 +174,7 @@
   position: fixed;
   right: 0;
   left: 0;
-  z-index: $zindexFixedNavbar;
+  z-index: $zindex-navbar-fixed;
   margin-bottom: 0; // remove 18px margin for default navbar
 }
 .navbar-fixed-top .navbar-inner,
@@ -196,7 +196,7 @@
 .navbar-static-top .container,
 .navbar-fixed-top .container,
 .navbar-fixed-bottom .container {
-  @include grid-core-span($gridColumns, $gridColumnWidth, $gridGutterWidth);
+  @include grid-core-span($grid-columns, $grid-column-width, $grid-gutter-width);
 }
 
 // Fixed to top
@@ -241,11 +241,11 @@
 // Links
 .navbar .nav > li > a {
   float: none;
-  // Vertically center the text given $navbarHeight
-  padding: (($navbarHeight - $baseLineHeight) / 2) 15px (($navbarHeight - $baseLineHeight) / 2);
-  color: $navbarLinkColor;
+  // Vertically center the text given $navbar-height
+  padding: (($navbar-height - $line-height-base) / 2) 15px (($navbar-height - $line-height-base) / 2);
+  color: $navbar-link-color;
   text-decoration: none;
-  text-shadow: 0 1px 0 $navbarBackgroundHighlight;
+  text-shadow: 0 1px 0 $navbar-bg-highlight;
 }
 .navbar .nav .dropdown-toggle .caret {
   margin-top: 8px;
@@ -254,8 +254,8 @@
 // Hover/focus
 .navbar .nav > li > a:focus,
 .navbar .nav > li > a:hover {
-  background-color: $navbarLinkBackgroundHover; // "transparent" is default to differentiate :hover/:focus from .active
-  color: $navbarLinkColorHover;
+  background-color: $navbar-link-hover-bg; // "transparent" is default to differentiate :hover/:focus from .active
+  color: $navbar-link-hover-color;
   text-decoration: none;
 }
 
@@ -263,9 +263,9 @@
 .navbar .nav > .active > a,
 .navbar .nav > .active > a:hover,
 .navbar .nav > .active > a:focus {
-  color: $navbarLinkColorActive;
+  color: $navbar-link-active-color;
   text-decoration: none;
-  background-color: $navbarLinkBackgroundActive;
+  background-color: $navbar-link-active-bg;
   @include box-shadow(inset 0 3px 8px rgba(0,0,0,.125));
 }
 
@@ -277,7 +277,7 @@
   padding: 7px 10px;
   margin-left: 5px;
   margin-right: 5px;
-  @include buttonBackground(darken($navbarBackgroundHighlight, 5%), darken($navbarBackground, 5%));
+  @include buttonBackground(darken($navbar-bg-highlight, 5%), darken($navbar-bg, 5%));
   @include box-shadow(inset 0 1px 0 rgba(255,255,255,.1), 0 1px 0 rgba(255,255,255,.075));
 }
 .navbar .btn-navbar .icon-bar {
@@ -305,7 +305,7 @@
     border-left:   7px solid transparent;
     border-right:  7px solid transparent;
     border-bottom: 7px solid #ccc;
-    border-bottom-color: $dropdownBorder;
+    border-bottom-color: $dropdown-border;
     position: absolute;
     top: -7px;
     left: 9px;
@@ -315,7 +315,7 @@
     display: inline-block;
     border-left:   6px solid transparent;
     border-right:  6px solid transparent;
-    border-bottom: 6px solid $dropdownBackground;
+    border-bottom: 6px solid $dropdown-bg;
     position: absolute;
     top: -6px;
     left: 10px;
@@ -325,13 +325,13 @@
 .navbar-fixed-bottom .nav > li > .dropdown-menu {
   &:before {
     border-top: 7px solid #ccc;
-    border-top-color: $dropdownBorder;
+    border-top-color: $dropdown-border;
     border-bottom: 0;
     bottom: -7px;
     top: auto;
   }
   &:after {
-    border-top: 6px solid $dropdownBackground;
+    border-top: 6px solid $dropdown-bg;
     border-bottom: 0;
     bottom: -6px;
     top: auto;
@@ -341,26 +341,26 @@
 // Caret should match text color on hover/focus
 .navbar .nav li.dropdown > a:hover .caret,
 .navbar .nav li.dropdown > a:focus .caret {
-  border-top-color: $navbarLinkColorActive;
-  border-bottom-color: $navbarLinkColorActive;
+  border-top-color: $navbar-link-active-color;
+  border-bottom-color: $navbar-link-active-color;
 }
 
 // Remove background color from open dropdown
 .navbar .nav li.dropdown.open > .dropdown-toggle,
 .navbar .nav li.dropdown.active > .dropdown-toggle,
 .navbar .nav li.dropdown.open.active > .dropdown-toggle {
-  background-color: $navbarLinkBackgroundActive;
-  color: $navbarLinkColorActive;
+  background-color: $navbar-link-active-bg;
+  color: $navbar-link-active-color;
 }
 .navbar .nav li.dropdown > .dropdown-toggle .caret {
-  border-top-color: $navbarLinkColor;
-  border-bottom-color: $navbarLinkColor;
+  border-top-color: $navbar-link-color;
+  border-bottom-color: $navbar-link-color;
 }
 .navbar .nav li.dropdown.open > .dropdown-toggle .caret,
 .navbar .nav li.dropdown.active > .dropdown-toggle .caret,
 .navbar .nav li.dropdown.open.active > .dropdown-toggle .caret {
-  border-top-color: $navbarLinkColorActive;
-  border-bottom-color: $navbarLinkColorActive;
+  border-top-color: $navbar-link-active-color;
+  border-bottom-color: $navbar-link-active-color;
 }
 
 // Right aligned menus need alt position
@@ -392,96 +392,96 @@
 .navbar-inverse {
 
   .navbar-inner {
-    @include gradient-vertical($navbarInverseBackgroundHighlight, $navbarInverseBackground);
-    border-color: $navbarInverseBorder;
+    @include gradient-vertical($navbar-inverse-bg-highlight, $navbar-inverse-bg);
+    border-color: $navbar-inverse-border;
   }
 
   .brand,
   .nav > li > a {
-    color: $navbarInverseLinkColor;
+    color: $navbar-inverse-link-color;
     text-shadow: 0 -1px 0 rgba(0,0,0,.25);
     &:hover,
     &:focus {
-      color: $navbarInverseLinkColorHover;
+      color: $navbar-inverse-link-hover-color;
     }
   }
 
   .brand {
-    color: $navbarInverseBrandColor;
+    color: $navbar-inverse-brand-color;
   }
 
   .navbar-text {
-    color: $navbarInverseText;
+    color: $navbar-inverse-color;
   }
 
   .nav > li > a:focus,
   .nav > li > a:hover {
-    background-color: $navbarInverseLinkBackgroundHover;
-    color: $navbarInverseLinkColorHover;
+    background-color: $navbar-inverse-link-hover-bg;
+    color: $navbar-inverse-link-hover-color;
   }
 
   .nav .active > a,
   .nav .active > a:hover,
   .nav .active > a:focus {
-    color: $navbarInverseLinkColorActive;
-    background-color: $navbarInverseLinkBackgroundActive;
+    color: $navbar-inverse-link-active-color;
+    background-color: $navbar-inverse-link-active-bg;
   }
 
   // Inline text links
   .navbar-link {
-    color: $navbarInverseLinkColor;
+    color: $navbar-inverse-link-color;
     &:hover,
     &:focus {
-      color: $navbarInverseLinkColorHover;
+      color: $navbar-inverse-link-hover-color;
     }
   }
 
   // Dividers in navbar
   .divider-vertical {
-    border-left-color: $navbarInverseBackground;
-    border-right-color: $navbarInverseBackgroundHighlight;
+    border-left-color: $navbar-inverse-bg;
+    border-right-color: $navbar-inverse-bg-highlight;
   }
 
   // Dropdowns
   .nav li.dropdown.open > .dropdown-toggle,
   .nav li.dropdown.active > .dropdown-toggle,
   .nav li.dropdown.open.active > .dropdown-toggle {
-    background-color: $navbarInverseLinkBackgroundActive;
-    color: $navbarInverseLinkColorActive;
+    background-color: $navbar-inverse-link-active-bg;
+    color: $navbar-inverse-link-active-color;
   }
   .nav li.dropdown > a:hover .caret,
   .nav li.dropdown > a:focus .caret {
-    border-top-color: $navbarInverseLinkColorActive;
-    color: $navbarInverseLinkColorActive;
+    border-top-color: $navbar-inverse-link-active-color;
+    color: $navbar-inverse-link-active-color;
   }
   .nav li.dropdown > .dropdown-toggle .caret {
-    border-top-color: $navbarInverseLinkColor;
-    border-bottom-color: $navbarInverseLinkColor;
+    border-top-color: $navbar-inverse-link-color;
+    border-bottom-color: $navbar-inverse-link-color;
   }
   .nav li.dropdown.open > .dropdown-toggle .caret,
   .nav li.dropdown.active > .dropdown-toggle .caret,
   .nav li.dropdown.open.active > .dropdown-toggle .caret {
-    border-top-color: $navbarInverseLinkColorActive;
-    border-bottom-color: $navbarInverseLinkColorActive;
+    border-top-color: $navbar-inverse-link-active-color;
+    border-bottom-color: $navbar-inverse-link-active-color;
   }
 
   // Navbar search
   .navbar-search {
     .search-query {
       color: $white;
-      background-color: $navbarInverseSearchBackground;
-      border-color: $navbarInverseSearchBorder;
+      background-color: $navbar-inverse-search-bg;
+      border-color: $navbar-inverse-search-border;
       @include box-shadow(inset 0 1px 2px rgba(0,0,0,.1), 0 1px 0 rgba(255,255,255,.15));
       @include transition(none);
-      @include placeholder($navbarInverseSearchPlaceholderColor);
+      @include placeholder($navbar-inverse-search-placeholder-color);
 
       // Focus states (we use .focused since IE7-8 and down doesn't support :focus)
       &:focus,
       &.focused {
         padding: 5px 15px;
-        color: $grayDark;
+        color: $gray-dark;
         text-shadow: 0 1px 0 $white;
-        background-color: $navbarInverseSearchBackgroundFocus;
+        background-color: $navbar-inverse-search-bg-focus;
         border: 0;
         @include box-shadow(0 0 3px rgba(0,0,0,.15));
         outline: 0;
@@ -491,7 +491,7 @@
 
   // Navbar collapse button
   .btn-navbar {
-    @include buttonBackground(darken($navbarInverseBackgroundHighlight, 5%), darken($navbarInverseBackground, 5%));
+    @include buttonBackground(darken($navbar-inverse-bg-highlight, 5%), darken($navbar-inverse-bg, 5%));
   }
 
 }
