--- a/lib/_navs.scss
+++ b/lib/_navs.scss
@@ -8,7 +8,7 @@
 
 .nav {
   margin-left: 0;
-  margin-bottom: $baseLineHeight;
+  margin-bottom: $line-height-base;
   list-style: none;
 }
 
@@ -19,7 +19,7 @@
 .nav > li > a:hover,
 .nav > li > a:focus {
   text-decoration: none;
-  background-color: $grayLighter;
+  background-color: $gray-lighter;
 }
 
 // Prevent IE8 from misplacing imgs
@@ -39,8 +39,8 @@
   padding: 3px 15px;
   font-size: 11px;
   font-weight: bold;
-  line-height: $baseLineHeight;
-  color: $grayLight;
+  line-height: $line-height-base;
+  color: $gray-light;
   text-shadow: 0 1px 0 rgba(255,255,255,.5);
   text-transform: uppercase;
 }
@@ -73,7 +73,7 @@
 .nav-list > .active > a:focus {
   color: $white;
   text-shadow: 0 -1px 0 rgba(0,0,0,.2);
-  background-color: $linkColor;
+  background-color: $link-color;
 }
 .nav-list [class^="icon-"],
 .nav-list [class*=" icon-"] {
@@ -121,12 +121,12 @@
 .nav-tabs > li > a {
   padding-top: 8px;
   padding-bottom: 8px;
-  line-height: $baseLineHeight;
+  line-height: $line-height-base;
   border: 1px solid transparent;
   @include border-radius(4px 4px 0 0);
   &:hover,
   &:focus {
-    border-color: $grayLighter $grayLighter #ddd;
+    border-color: $gray-lighter $gray-lighter #ddd;
   }
 }
 // Active state, and it's :hover/:focus to override normal :hover/:focus
@@ -134,7 +134,7 @@
 .nav-tabs > .active > a:hover,
 .nav-tabs > .active > a:focus {
   color: $gray;
-  background-color: $bodyBackground;
+  background-color: $body-bg;
   border: 1px solid #ddd;
   border-bottom-color: transparent;
   cursor: default;
@@ -158,7 +158,7 @@
 .nav-pills > .active > a:hover,
 .nav-pills > .active > a:focus {
   color: $white;
-  background-color: $linkColor;
+  background-color: $link-color;
 }
 
 
@@ -216,16 +216,16 @@
 
 // Default dropdown links
 // -------------------------
-// Make carets use linkColor to start
+// Make carets use link-color to start
 .nav .dropdown-toggle .caret {
-  border-top-color: $linkColor;
-  border-bottom-color: $linkColor;
+  border-top-color: $link-color;
+  border-bottom-color: $link-color;
   margin-top: 6px;
 }
 .nav .dropdown-toggle:hover .caret,
 .nav .dropdown-toggle:focus .caret {
-  border-top-color: $linkColorHover;
-  border-bottom-color: $linkColorHover;
+  border-top-color: $link-color-hover;
+  border-bottom-color: $link-color-hover;
 }
 /* move down carets for tabs */
 .nav-tabs .dropdown-toggle .caret {
@@ -257,8 +257,8 @@
 .nav > li.dropdown.open.active > a:hover,
 .nav > li.dropdown.open.active > a:focus {
   color: $white;
-  background-color: $grayLight;
-  border-color: $grayLight;
+  background-color: $gray-light;
+  border-color: $gray-light;
 }
 .nav li.dropdown.open .caret,
 .nav li.dropdown.open.active .caret,
@@ -272,7 +272,7 @@
 // Dropdowns in stacked tabs
 .tabs-stacked .open > a:hover,
 .tabs-stacked .open > a:focus {
-  border-color: $grayLight;
+  border-color: $gray-light;
 }
 
 
@@ -361,7 +361,7 @@
 }
 .tabs-left > .nav-tabs > li > a:hover,
 .tabs-left > .nav-tabs > li > a:focus {
-  border-color: $grayLighter #ddd $grayLighter $grayLighter;
+  border-color: $gray-lighter #ddd $gray-lighter $gray-lighter;
 }
 .tabs-left > .nav-tabs .active > a,
 .tabs-left > .nav-tabs .active > a:hover,
@@ -382,7 +382,7 @@
 }
 .tabs-right > .nav-tabs > li > a:hover,
 .tabs-right > .nav-tabs > li > a:focus {
-  border-color: $grayLighter $grayLighter $grayLighter #ddd;
+  border-color: $gray-lighter $gray-lighter $gray-lighter #ddd;
 }
 .tabs-right > .nav-tabs .active > a,
 .tabs-right > .nav-tabs .active > a:hover,
@@ -398,7 +398,7 @@
 
 // Gray out text
 .nav > .disabled > a {
-  color: $grayLight;
+  color: $gray-light;
 }
 // Nuke hover/focus effects
 .nav > .disabled > a:hover,
