--- a/lib/_popovers.scss
+++ b/lib/_popovers.scss
@@ -7,12 +7,12 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: $zindexPopover;
+  z-index: $zindex-popover;
   display: none;
   max-width: 276px;
   padding: 1px;
   text-align: left; // Reset given new insertion method
-  background-color: $popoverBackground;
+  background-color: $popover-bg;
   -webkit-background-clip: padding-box;
      -moz-background-clip: padding;
           background-clip: padding-box;
@@ -37,8 +37,8 @@
   font-size: 14px;
   font-weight: normal;
   line-height: 18px;
-  background-color: $popoverTitleBackground;
-  border-bottom: 1px solid darken($popoverTitleBackground, 5%);
+  background-color: $popover-title-bg;
+  border-bottom: 1px solid darken($popover-title-bg, 5%);
   @include border-radius(5px 5px 0 0);
 
   &:empty {
@@ -64,69 +64,69 @@
   border-style: solid;
 }
 .popover .arrow {
-  border-width: $popoverArrowOuterWidth;
+  border-width: $popover-arrow-outer-width;
 }
 .popover .arrow:after {
-  border-width: $popoverArrowWidth;
+  border-width: $popover-arrow-width;
   content: "";
 }
 
 .popover {
   &.top .arrow {
     left: 50%;
-    margin-left: -$popoverArrowOuterWidth;
+    margin-left: -$popover-arrow-outer-width;
     border-bottom-width: 0;
     border-top-color: #999; // IE8 fallback
-    border-top-color: $popoverArrowOuterColor;
-    bottom: -$popoverArrowOuterWidth;
+    border-top-color: $popover-arrow-outer-color;
+    bottom: -$popover-arrow-outer-width;
     &:after {
       bottom: 1px;
-      margin-left: -$popoverArrowWidth;
+      margin-left: -$popover-arrow-width;
       border-bottom-width: 0;
-      border-top-color: $popoverArrowColor;
+      border-top-color: $popover-arrow-color;
     }
   }
   &.right .arrow {
     top: 50%;
-    left: -$popoverArrowOuterWidth;
-    margin-top: -$popoverArrowOuterWidth;
+    left: -$popover-arrow-outer-width;
+    margin-top: -$popover-arrow-outer-width;
     border-left-width: 0;
     border-right-color: #999; // IE8 fallback
-    border-right-color: $popoverArrowOuterColor;
+    border-right-color: $popover-arrow-outer-color;
     &:after {
       left: 1px;
-      bottom: -$popoverArrowWidth;
+      bottom: -$popover-arrow-width;
       border-left-width: 0;
-      border-right-color: $popoverArrowColor;
+      border-right-color: $popover-arrow-color;
     }
   }
   &.bottom .arrow {
     left: 50%;
-    margin-left: -$popoverArrowOuterWidth;
+    margin-left: -$popover-arrow-outer-width;
     border-top-width: 0;
     border-bottom-color: #999; // IE8 fallback
-    border-bottom-color: $popoverArrowOuterColor;
-    top: -$popoverArrowOuterWidth;
+    border-bottom-color: $popover-arrow-outer-color;
+    top: -$popover-arrow-outer-width;
     &:after {
       top: 1px;
-      margin-left: -$popoverArrowWidth;
+      margin-left: -$popover-arrow-width;
       border-top-width: 0;
-      border-bottom-color: $popoverArrowColor;
+      border-bottom-color: $popover-arrow-color;
     }
   }
 
   &.left .arrow {
     top: 50%;
-    right: -$popoverArrowOuterWidth;
-    margin-top: -$popoverArrowOuterWidth;
+    right: -$popover-arrow-outer-width;
+    margin-top: -$popover-arrow-outer-width;
     border-right-width: 0;
     border-left-color: #999; // IE8 fallback
-    border-left-color: $popoverArrowOuterColor;
+    border-left-color: $popover-arrow-outer-color;
     &:after {
       right: 1px;
       border-right-width: 0;
-      border-left-color: $popoverArrowColor;
-      bottom: -$popoverArrowWidth;
+      border-left-color: $popover-arrow-color;
+      bottom: -$popover-arrow-width;
     }
   }
 
