--- a/lib/_progress-bars.scss
+++ b/lib/_progress-bars.scss
@@ -44,11 +44,11 @@
 // Outer container
 .progress {
   overflow: hidden;
-  height: $baseLineHeight;
-  margin-bottom: $baseLineHeight;
+  height: $line-height-base;
+  margin-bottom: $line-height-base;
   @include gradient-vertical(#f5f5f5, #f9f9f9);
   @include box-shadow(inset 0 1px 2px rgba(0,0,0,.1));
-  @include border-radius($baseBorderRadius);
+  @include border-radius($border-radius-base);
 }
 
 // Bar of progress
