--- a/lib/_responsive-1200px-min.scss
+++ b/lib/_responsive-1200px-min.scss
@@ -6,20 +6,20 @@
 @media (min-width: 1200px) {
 
   // Fixed grid
-  @include grid-core($gridColumnWidth1200, $gridGutterWidth1200);
+  @include grid-core($grid-column-width-1200, $grid-gutter-width-1200);
 
   // Fluid grid
-  @include grid-fluid($fluidGridColumnWidth1200, $fluidGridGutterWidth1200);
+  @include grid-fluid($fluid-grid-column-width-1200, $fluid-grid-gutter-width-1200);
 
   // Input grid
-  @include grid-input($gridColumnWidth1200, $gridGutterWidth1200);
+  @include grid-input($grid-column-width-1200, $grid-gutter-width-1200);
 
   // Thumbnails
   .thumbnails {
-    margin-left: -$gridGutterWidth1200;
+    margin-left: -$grid-gutter-width-1200;
   }
   .thumbnails > li {
-    margin-left: $gridGutterWidth1200;
+    margin-left: $grid-gutter-width-1200;
   }
   .row-fluid .thumbnails {
     margin-left: 0;
