--- a/lib/_responsive-768px-979px.scss
+++ b/lib/_responsive-768px-979px.scss
@@ -6,14 +6,14 @@
 @media (min-width: 768px) and (max-width: 979px) {
 
   // Fixed grid
-  @include grid-core($gridColumnWidth768, $gridGutterWidth768);
+  @include grid-core($grid-column-width-768, $grid-gutter-width-768);
 
   // Fluid grid
-  @include grid-fluid($fluidGridColumnWidth768, $fluidGridGutterWidth768);
+  @include grid-fluid($fluid-grid-column-width-768, $fluid-grid-gutter-width-768);
 
   // Input grid
-  @include grid-input($gridColumnWidth768, $gridGutterWidth768);
+  @include grid-input($grid-column-width-768, $grid-gutter-width-768);
 
-  // No need to reset .thumbnails here since it's the same $gridGutterWidth
+  // No need to reset .thumbnails here since it's the same $grid-gutter-width
 
 }
