--- a/lib/_thumbnails.scss
+++ b/lib/_thumbnails.scss
@@ -7,7 +7,7 @@
 
 // Make wrapper ul behave like the grid
 .thumbnails {
-  margin-left: -$gridGutterWidth;
+  margin-left: -$grid-gutter-width;
   list-style: none;
   @include clearfix();
 }
@@ -19,24 +19,24 @@
 // Float li to make thumbnails appear in a row
 .thumbnails > li {
   float: left; // Explicity set the float since we don't require .span* classes
-  margin-bottom: $baseLineHeight;
-  margin-left: $gridGutterWidth;
+  margin-bottom: $line-height-base;
+  margin-left: $grid-gutter-width;
 }
 
 // The actual thumbnail (can be `a` or `div`)
 .thumbnail {
   display: block;
   padding: 4px;
-  line-height: $baseLineHeight;
+  line-height: $line-height-base;
   border: 1px solid #ddd;
-  @include border-radius($baseBorderRadius);
+  @include border-radius($border-radius-base);
   @include box-shadow(0 1px 3px rgba(0,0,0,.055));
   @include transition(all .2s ease-in-out);
 }
 // Add a hover/focus state for linked versions only
 a.thumbnail:hover,
 a.thumbnail:focus {
-  border-color: $linkColor;
+  border-color: $link-color;
   @include box-shadow(0 1px 4px rgba(0,105,214,.25));
 }
 
