--- a/lib/_type.scss
+++ b/lib/_type.scss
@@ -7,13 +7,13 @@
 // -------------------------
 
 p {
-  margin: 0 0 $baseLineHeight / 2;
+  margin: 0 0 $line-height-base / 2;
 }
 .lead {
-  margin-bottom: $baseLineHeight;
-  font-size: $baseFontSize * 1.5;
+  margin-bottom: $line-height-base;
+  font-size: $font-size-base * 1.5;
   font-weight: 200;
-  line-height: $baseLineHeight * 1.5;
+  line-height: $line-height-base * 1.5;
 }
 
 
@@ -28,25 +28,25 @@ em      { font-style: italic; }
 cite    { font-style: normal; }
 
 // Utility classes
-.muted               { color: $grayLight; }
+.muted               { color: $gray-light; }
 a.muted:hover,
-a.muted:focus        { color: darken($grayLight, 10%); }
+a.muted:focus        { color: darken($gray-light, 10%); }
 
-.text-warning        { color: $warningText; }
+.text-warning        { color: $state-warning-text; }
 a.text-warning:hover,
-a.text-warning:focus { color: darken($warningText, 10%); }
+a.text-warning:focus { color: darken($state-warning-text, 10%); }
 
-.text-error          { color: $errorText; }
+.text-error          { color: $state-error-text; }
 a.text-error:hover,
-a.text-error:focus   { color: darken($errorText, 10%); }
+a.text-error:focus   { color: darken($state-error-text, 10%); }
 
-.text-info           { color: $infoText; }
+.text-info           { color: $state-info-text; }
 a.text-info:hover,
-a.text-info:focus    { color: darken($infoText, 10%); }
+a.text-info:focus    { color: darken($state-info-text, 10%); }
 
-.text-success        { color: $successText; }
+.text-success        { color: $state-success-text; }
 a.text-success:hover,
-a.text-success:focus { color: darken($successText, 10%); }
+a.text-success:focus { color: darken($state-success-text, 10%); }
 
 .text-left           { text-align: left; }
 .text-right          { text-align: right; }
@@ -57,43 +57,43 @@ a.text-success:focus { color: darken($successText, 10%); }
 // -------------------------
 
 h1, h2, h3, h4, h5, h6 {
-  margin: ($baseLineHeight / 2) 0;
-  font-family: $headingsFontFamily;
-  font-weight: $headingsFontWeight;
-  line-height: $baseLineHeight;
-  color: $headingsColor;
+  margin: ($line-height-base / 2) 0;
+  font-family: $headings-font-family;
+  font-weight: $headings-font-weight;
+  line-height: $line-height-base;
+  color: $headings-color;
   text-rendering: optimizelegibility; // Fix the character spacing for headings
   small {
     font-weight: normal;
     line-height: 1;
-    color: $grayLight;
+    color: $gray-light;
   }
 }
 
 h1,
 h2,
-h3 { line-height: $baseLineHeight * 2; }
+h3 { line-height: $line-height-base * 2; }
 
-h1 { font-size: $baseFontSize * 2.75; } // ~38px
-h2 { font-size: $baseFontSize * 2.25; } // ~32px
-h3 { font-size: $baseFontSize * 1.75; } // ~24px
-h4 { font-size: $baseFontSize * 1.25; } // ~18px
-h5 { font-size: $baseFontSize; }
-h6 { font-size: $baseFontSize * 0.85; } // ~12px
+h1 { font-size: $font-size-base * 2.75; } // ~38px
+h2 { font-size: $font-size-base * 2.25; } // ~32px
+h3 { font-size: $font-size-base * 1.75; } // ~24px
+h4 { font-size: $font-size-base * 1.25; } // ~18px
+h5 { font-size: $font-size-base; }
+h6 { font-size: $font-size-base * 0.85; } // ~12px
 
-h1 small { font-size: $baseFontSize * 1.75; } // ~24px
-h2 small { font-size: $baseFontSize * 1.25; } // ~18px
-h3 small { font-size: $baseFontSize; }
-h4 small { font-size: $baseFontSize; }
+h1 small { font-size: $font-size-base * 1.75; } // ~24px
+h2 small { font-size: $font-size-base * 1.25; } // ~18px
+h3 small { font-size: $font-size-base; }
+h4 small { font-size: $font-size-base; }
 
 
 // Page header
 // -------------------------
 
 .page-header {
-  padding-bottom: ($baseLineHeight / 2) - 1;
-  margin: $baseLineHeight 0 ($baseLineHeight * 1.5);
-  border-bottom: 1px solid $grayLighter;
+  padding-bottom: ($line-height-base / 2) - 1;
+  margin: $line-height-base 0 ($line-height-base * 1.5);
+  border-bottom: 1px solid $gray-lighter;
 }
 
 
@@ -104,7 +104,7 @@ h4 small { font-size: $baseFontSize; }
 // Unordered and Ordered lists
 ul, ol {
   padding: 0;
-  margin: 0 0 $baseLineHeight / 2 25px;
+  margin: 0 0 $line-height-base / 2 25px;
 }
 ul ul,
 ul ol,
@@ -113,7 +113,7 @@ ol ul {
   margin-bottom: 0;
 }
 li {
-  line-height: $baseLineHeight;
+  line-height: $line-height-base;
 }
 
 // Remove default list styles
@@ -138,30 +138,30 @@ ol.inline {
 
 // Description Lists
 dl {
-  margin-bottom: $baseLineHeight;
+  margin-bottom: $line-height-base;
 }
 dt,
 dd {
-  line-height: $baseLineHeight;
+  line-height: $line-height-base;
 }
 dt {
   font-weight: bold;
 }
 dd {
-  margin-left: $baseLineHeight / 2;
+  margin-left: $line-height-base / 2;
 }
 // Horizontal layout (like forms)
 .dl-horizontal {
   @include clearfix(); // Ensure dl clears floats if empty dd elements present
   dt {
     float: left;
-    width: $horizontalComponentOffset - 20;
+    width: $component-offset-horizontal - 20;
     clear: left;
     text-align: right;
     @include text-overflow();
   }
   dd {
-    margin-left: $horizontalComponentOffset;
+    margin-left: $component-offset-horizontal;
   }
 }
 
@@ -170,9 +170,9 @@ dd {
 
 // Horizontal rules
 hr {
-  margin: $baseLineHeight 0;
+  margin: $line-height-base 0;
   border: 0;
-  border-top: 1px solid $hrBorder;
+  border-top: 1px solid $hr-border;
   border-bottom: 1px solid $white;
 }
 
@@ -181,7 +181,7 @@ abbr[title],
 // Added data-* attribute to help out our tooltip plugin, per https://github.com/twitter/bootstrap/issues/5257
 abbr[data-original-title] {
   cursor: help;
-  border-bottom: 1px dotted $grayLight;
+  border-bottom: 1px dotted $gray-light;
 }
 abbr.initialism {
   font-size: 90%;
@@ -191,18 +191,18 @@ abbr.initialism {
 // Blockquotes
 blockquote {
   padding: 0 0 0 15px;
-  margin: 0 0 $baseLineHeight;
-  border-left: 5px solid $grayLighter;
+  margin: 0 0 $line-height-base;
+  border-left: 5px solid $gray-lighter;
   p {
     margin-bottom: 0;
-    font-size: $baseFontSize * 1.25;
+    font-size: $font-size-base * 1.25;
     font-weight: 300;
     line-height: 1.25;
   }
   small {
     display: block;
-    line-height: $baseLineHeight;
-    color: $grayLight;
+    line-height: $line-height-base;
+    color: $gray-light;
     &:before {
       content: '\2014 \00A0';
     }
@@ -213,7 +213,7 @@ blockquote {
     float: right;
     padding-right: 15px;
     padding-left: 0;
-    border-right: 5px solid $grayLighter;
+    border-right: 5px solid $gray-lighter;
     border-left: 0;
     p,
     small {
@@ -241,7 +241,7 @@ blockquote:after {
 // Addresses
 address {
   display: block;
-  margin-bottom: $baseLineHeight;
+  margin-bottom: $line-height-base;
   font-style: normal;
-  line-height: $baseLineHeight;
+  line-height: $line-height-base;
 }
