--- a/lib/_variables.scss
+++ b/lib/_variables.scss
@@ -10,18 +10,18 @@
 // Grays
 // -------------------------
 $black:                 #000 !default;
-$grayDarker:            #222 !default;
-$grayDark:              #333 !default;
+$gray-darker:           #222 !default;
+$gray-dark:             #333 !default;
 $gray:                  #555 !default;
-$grayLight:             #999 !default;
-$grayLighter:           #eee !default;
+$gray-light:            #999 !default;
+$gray-lighter:          #eee !default;
 $white:                 #fff !default;
 
 
 // Accent colors
 // -------------------------
 $blue:                  #049cdb !default;
-$blueDark:              #0064cd !default;
+$blue-dark:             #0064cd !default;
 $green:                 #46a546 !default;
 $red:                   #9d261d !default;
 $yellow:                #ffc40d !default;
@@ -32,104 +32,104 @@ $purple:                #7a43b6 !default;
 
 // Scaffolding
 // -------------------------
-$bodyBackground:        $white !default;
-$textColor:             $grayDark !default;
+$body-bg:               $white !default;
+$text-color:            $gray-dark !default;
 
 
 // Links
 // -------------------------
-$linkColor:             #08c !default;
-$linkColorHover:        darken($linkColor, 15%) !default;
+$link-color:            #08c !default;
+$link-color-hover:      darken($link-color, 15%) !default;
 
 
 // Typography
 // -------------------------
-$sansFontFamily:        "Helvetica Neue", Helvetica, Arial, sans-serif !default;
-$serifFontFamily:       Georgia, "Times New Roman", Times, serif !default;
-$monoFontFamily:        Monaco, Menlo, Consolas, "Courier New", monospace !default;
+$font-family-sans-serif:    "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$font-family-serif:         Georgia, "Times New Roman", Times, serif !default;
+$font-family-monospace:     Monaco, Menlo, Consolas, "Courier New", monospace !default;
 
-$baseFontSize:          14px !default;
-$baseFontFamily:        $sansFontFamily !default;
-$baseLineHeight:        20px !default;
-$altFontFamily:         $serifFontFamily !default;
+$font-size-base:            14px !default;
+$font-family-base:          $font-family-sans-serif !default;
+$line-height-base:          20px !default;
+$font-family-alt:           $font-family-serif !default;
 
-$headingsFontFamily:    inherit !default; // empty to use BS default, $baseFontFamily
-$headingsFontWeight:    bold !default;    // instead of browser default, bold
-$headingsColor:         inherit !default; // empty to use BS default, $textColor
+$headings-font-family:      inherit !default; // empty to use BS default, $font-family-base
+$headings-font-weight:      bold !default;    // instead of browser default, bold
+$headings-color:            inherit !default; // empty to use BS default, $text-color
 
 
 // Component sizing
 // -------------------------
 // Based on 14px font-size and 20px line-height
 
-$fontSizeLarge:         $baseFontSize * 1.25 !default; // ~18px
-$fontSizeSmall:         $baseFontSize * 0.85 !default; // ~12px
-$fontSizeMini:          $baseFontSize * 0.75 !default; // ~11px
+$font-size-large:       $font-size-base * 1.25 !default; // ~18px
+$font-size-small:       $font-size-base * 0.85 !default; // ~12px
+$font-size-mini:        $font-size-base * 0.75 !default; // ~11px
 
-$paddingLarge:          11px 19px !default; // 44px
-$paddingSmall:          2px 10px !default;  // 26px
-$paddingMini:           0px 6px !default;   // 22px
+$padding-large:         11px 19px !default; // 44px
+$padding-small:         2px 10px !default;  // 26px
+$padding-mini:          0px 6px !default;   // 22px
 
-$baseBorderRadius:      4px !default;
-$borderRadiusLarge:     6px !default;
-$borderRadiusSmall:     3px !default;
+$border-radius-base:    4px !default;
+$border-radius-large:   6px !default;
+$border-radius-small:   3px !default;
 
 
 // Tables
 // -------------------------
-$tableBackground:                   transparent !default; // overall background-color
-$tableBackgroundAccent:             #f9f9f9 !default; // for striping
-$tableBackgroundHover:              #f5f5f5 !default; // for hover
-$tableBorder:                       #ddd !default; // table and cell border
+$table-bg:                  transparent !default; // overall background-color
+$table-accent-bg:           #f9f9f9 !default; // for striping
+$table-hover-bg:            #f5f5f5 !default; // for hover
+$table-border-color:        #ddd !default; // table and cell border
 
 // Buttons
 // -------------------------
-$btnBackground:                     $white !default;
-$btnBackgroundHighlight:            darken($white, 10%) !default;
-$btnBorder:                         #ccc !default;
+$btn-default-bg:                $white !default;
+$btn-default-highlight-bg:      darken($white, 10%) !default;
+$btn-default-border-color:      #ccc !default;
 
-$btnPrimaryBackground:              $linkColor !default;
-$btnPrimaryBackgroundHighlight:     adjust-hue($btnPrimaryBackground, 20%) !default;
+$btn-primary-bg:                $link-color !default;
+$btn-primary-highlight-bg:      adjust-hue($btn-primary-bg, 20%) !default;
 
-$btnInfoBackground:                 #5bc0de !default;
-$btnInfoBackgroundHighlight:        #2f96b4 !default;
+$btn-info-bg:                   #5bc0de !default;
+$btn-info-highlight-bg:         #2f96b4 !default;
 
-$btnSuccessBackground:              #62c462 !default;
-$btnSuccessBackgroundHighlight:     #51a351 !default;
+$btn-success-bg:                #62c462 !default;
+$btn-success-highlight-bg:      #51a351 !default;
 
-$btnWarningBackground:              lighten($orange, 15%) !default;
-$btnWarningBackgroundHighlight:     $orange !default;
+$btn-warning-bg:                lighten($orange, 15%) !default;
+$btn-warning-highlight-bg:      $orange !default;
 
-$btnDangerBackground:               #ee5f5b !default;
-$btnDangerBackgroundHighlight:      #bd362f !default;
+$btn-danger-bg:                 #ee5f5b !default;
+$btn-danger-highlight-bg:       #bd362f !default;
 
-$btnInverseBackground:              #444 !default;
-$btnInverseBackgroundHighlight:     $grayDarker !default;
+$btn-inverse-bg:                #444 !default;
+$btn-inverse-highlight-bg:      $gray-darker !default;
 
 
 // Forms
 // -------------------------
-$inputBackground:               $white !default;
-$inputBorder:                   #ccc !default;
-$inputBorderRadius:             $baseBorderRadius !default;
-$inputDisabledBackground:       $grayLighter !default;
-$formActionsBackground:         #f5f5f5 !default;
-$inputHeight:                   $baseLineHeight + 10px; // base line-height + 8px vertical padding + 2px top/bottom border
+$input-bg:                      $white !default;
+$input-border:                  #ccc !default;
+$input-border-radius:           $border-radius-base !default;
+$input-bg-disabled:             $gray-lighter !default;
+$input-actions-background:      #f5f5f5 !default;
+$input-height:                  $line-height-base + 10px; // base line-height + 8px vertical padding + 2px top/bottom border
 
 
 // Dropdowns
 // -------------------------
-$dropdownBackground:            $white !default;
-$dropdownBorder:                rgba(0,0,0,.2) !default;
-$dropdownDividerTop:            #e5e5e5 !default;
-$dropdownDividerBottom:         $white !default;
+$dropdown-bg:                   $white !default;
+$dropdown-border:               rgba(0,0,0,.2) !default;
+$dropdown-divider-top-bg:       #e5e5e5 !default;
+$dropdown-divider-bottom-bg:    $white !default;
 
-$dropdownLinkColor:             $grayDark !default;
-$dropdownLinkColorHover:        $white !default;
-$dropdownLinkColorActive:       $white !default;
+$dropdown-link-color:           $gray-dark !default;
+$dropdown-link-hover-color:     $white !default;
+$dropdown-link-active-color:    $white !default;
 
-$dropdownLinkBackgroundActive:  $linkColor !default;
-$dropdownLinkBackgroundHover:   $dropdownLinkBackgroundActive !default;
+$dropdown-link-active-bg:       $link-color !default;
+$dropdown-link-hover-bg:        $dropdown-link-active-bg !default;
 
 
 
@@ -141,127 +141,127 @@ $dropdownLinkBackgroundHover:   $dropdownLinkBackgroundActive !default;
 // -------------------------
 // Used for a bird's eye view of components dependent on the z-axis
 // Try to avoid customizing these :)
-$zindexDropdown:          1000 !default;
-$zindexPopover:           1010 !default;
-$zindexTooltip:           1030 !default;
-$zindexFixedNavbar:       1030 !default;
-$zindexModalBackdrop:     1040 !default;
-$zindexModal:             1050 !default;
+$zindex-dropdown:           1000 !default;
+$zindex-popover:            1010 !default;
+$zindex-tooltip:            1030 !default;
+$zindex-navbar-fixed:       1030 !default;
+$zindex-modal-background:   1040 !default;
+$zindex-modal:              1050 !default;
 
 
 // Sprite icons path
 // -------------------------
-$iconSpritePath:          "../img/glyphicons-halflings.png" !default;
-$iconWhiteSpritePath:     "../img/glyphicons-halflings-white.png" !default;
+$icon-sprite-path:              "../img/glyphicons-halflings.png" !default;
+$icon-white-sprite-path:        "../img/glyphicons-halflings-white.png" !default;
 
 
 // Input placeholder text color
 // -------------------------
-$placeholderText:         $grayLight !default;
+$input-color-placeholder:                   $gray-light !default;
 
 
 // Hr border color
 // -------------------------
-$hrBorder:                $grayLighter !default;
+$hr-border:                                 $gray-lighter !default;
 
 
 // Horizontal forms & lists
 // -------------------------
-$horizontalComponentOffset:       180px !default;
+$component-offset-horizontal:               180px !default;
 
 
 // Wells
 // -------------------------
-$wellBackground:                  #f5f5f5 !default;
+$well-bg:                                   #f5f5f5 !default;
 
 
 // Navbar
 // -------------------------
-$navbarCollapseWidth:             979px !default;
-$navbarCollapseDesktopWidth:      $navbarCollapseWidth + 1;
+$navbar-collapse-width:                     979px !default;
+$navbar-collapse-width-desktop:             $navbar-collapse-width + 1;
 
-$navbarHeight:                    40px !default;
-$navbarBackgroundHighlight:       #ffffff !default;
-$navbarBackground:                darken($navbarBackgroundHighlight, 5%) !default;
-$navbarBorder:                    darken($navbarBackground, 12%) !default;
+$navbar-height:                             40px !default;
+$navbar-bg-highlight:                       #ffffff !default;
+$navbar-bg:                                 darken($navbar-bg-highlight, 5%) !default;
+$navbar-border:                             darken($navbar-bg, 12%) !default;
 
-$navbarText:                      #777 !default;
-$navbarLinkColor:                 #777 !default;
-$navbarLinkColorHover:            $grayDark !default;
-$navbarLinkColorActive:           $gray !default;
-$navbarLinkBackgroundHover:       transparent !default;
-$navbarLinkBackgroundActive:      darken($navbarBackground, 5%) !default;
+$navbar-color:                              #777 !default;
+$navbar-link-color:                         #777 !default;
+$navbar-link-hover-color:                   $gray-dark !default;
+$navbar-link-active-color:                  $gray !default;
+$navbar-link-hover-bg:                      transparent !default;
+$navbar-link-active-bg:                     darken($navbar-bg, 5%) !default;
 
-$navbarBrandColor:                $navbarLinkColor !default;
+$navbar-default-brand-color:                $navbar-link-color !default;
 
 // Inverted navbar
-$navbarInverseBackground:                #111111 !default;
-$navbarInverseBackgroundHighlight:       #222222 !default;
-$navbarInverseBorder:                    #252525 !default;
+$navbar-inverse-bg:                         #111111 !default;
+$navbar-inverse-bg-highlight:               #222222 !default;
+$navbar-inverse-border:                     #252525 !default;
 
-$navbarInverseText:                      $grayLight !default;
-$navbarInverseLinkColor:                 $grayLight !default;
-$navbarInverseLinkColorHover:            $white !default;
-$navbarInverseLinkColorActive:           $navbarInverseLinkColorHover !default;
-$navbarInverseLinkBackgroundHover:       transparent !default;
-$navbarInverseLinkBackgroundActive:      $navbarInverseBackground !default;
+$navbar-inverse-color:                      $gray-light !default;
+$navbar-inverse-link-color:                 $gray-light !default;
+$navbar-inverse-link-hover-color:           $white !default;
+$navbar-inverse-link-active-color:          $navbar-inverse-link-hover-color !default;
+$navbar-inverse-link-hover-bg:              transparent !default;
+$navbar-inverse-link-active-bg:             $navbar-inverse-bg !default;
 
-$navbarInverseSearchBackground:          lighten($navbarInverseBackground, 25%) !default;
-$navbarInverseSearchBackgroundFocus:     $white !default;
-$navbarInverseSearchBorder:              $navbarInverseBackground !default;
-$navbarInverseSearchPlaceholderColor:    #ccc !default;
+$navbar-inverse-search-bg:                  lighten($navbar-inverse-bg, 25%) !default;
+$navbar-inverse-search-bg-focus:            $white !default;
+$navbar-inverse-search-border:              $navbar-inverse-bg !default;
+$navbar-inverse-search-placeholder-color:   #ccc !default;
 
-$navbarInverseBrandColor:                $navbarInverseLinkColor !default;
+$navbar-inverse-brand-color:                $navbar-inverse-link-color !default;
 
 
 // Pagination
 // -------------------------
-$paginationBackground:                #fff !default;
-$paginationBorder:                    #ddd !default;
-$paginationActiveBackground:          #f5f5f5 !default;
+$pagination-bg:                     #fff !default;
+$pagination-border:                 #ddd !default;
+$pagination-active-bg:              #f5f5f5 !default;
 
 
 // Hero unit
 // -------------------------
-$heroUnitBackground:              $grayLighter !default;
-$heroUnitHeadingColor:            inherit !default;
-$heroUnitLeadColor:               inherit !default;
+$hero-unit-bg:                      $gray-lighter !default;
+$hero-unit-heading-color:           inherit !default;
+$hero-unit-lead-color:              inherit !default;
 
 
 // Form states and alerts
 // -------------------------
-$warningText:             #c09853 !default;
-$warningBackground:       #fcf8e3 !default;
-$warningBorder:           darken(adjust-hue($warningBackground, -10), 3%) !default;
+$state-warning-text:            #c09853 !default;
+$state-warning-bg:              #fcf8e3 !default;
+$state-warning-border:          darken(adjust-hue($state-warning-bg, -10), 3%) !default;
 
-$errorText:               #b94a48 !default;
-$errorBackground:         #f2dede !default;
-$errorBorder:             darken(adjust-hue($errorBackground, -10), 3%) !default;
+$state-error-text:              #b94a48 !default;
+$state-error-bg:                #f2dede !default;
+$state-error-border:            darken(adjust-hue($state-error-bg, -10), 3%) !default;
 
-$successText:             #468847 !default;
-$successBackground:       #dff0d8 !default;
-$successBorder:           darken(adjust-hue($successBackground, -10), 5%) !default;
+$state-success-text:            #468847 !default;
+$state-success-bg:              #dff0d8 !default;
+$state-success-border:          darken(adjust-hue($state-success-bg, -10), 5%) !default;
 
-$infoText:                #3a87ad !default;
-$infoBackground:          #d9edf7 !default;
-$infoBorder:              darken(adjust-hue($infoBackground, -10), 7%) !default;
+$state-info-text:               #3a87ad !default;
+$state-info-bg:                 #d9edf7 !default;
+$state-info-border:             darken(adjust-hue($state-info-bg, -10), 7%) !default;
 
 
 // Tooltips and popovers
 // -------------------------
-$tooltipColor:            #fff !default;
-$tooltipBackground:       #000 !default;
-$tooltipArrowWidth:       5px !default;
-$tooltipArrowColor:       $tooltipBackground !default;
+$tooltip-color:             #fff !default;
+$tooltip-bg:                #000 !default;
+$tooltip-arrow-width:       5px !default;
+$tooltip-arrow-color:       $tooltip-bg !default;
 
-$popoverBackground:       #fff !default;
-$popoverArrowWidth:       10px !default;
-$popoverArrowColor:       #fff !default;
-$popoverTitleBackground:  darken($popoverBackground, 3%) !default;
+$popover-bg:                #fff !default;
+$popover-arrow-width:       10px !default;
+$popover-arrow-color:       #fff !default;
+$popover-title-bg:          darken($popover-bg, 3%) !default;
 
 // Special enhancement for popovers
-$popoverArrowOuterWidth:  $popoverArrowWidth + 1 !default;
-$popoverArrowOuterColor:  rgba(0,0,0,.25) !default;
+$popover-arrow-outer-width:  $popover-arrow-width + 1 !default;
+$popover-arrow-outer-color:  rgba(0,0,0,.25) !default;
 
 
 
@@ -271,31 +271,31 @@ $popoverArrowOuterColor:  rgba(0,0,0,.25) !default;
 
 // Default 940px grid
 // -------------------------
-$gridColumns:             12 !default;
-$gridColumnWidth:         60px !default;
-$gridGutterWidth:         20px !default;
-$gridRowWidth:            ($gridColumns * $gridColumnWidth) + ($gridGutterWidth * ($gridColumns - 1)) !default;
+$grid-columns:              12 !default;
+$grid-column-width:         60px !default;
+$grid-gutter-width:         20px !default;
+$grid-row-width:            ($grid-columns * $grid-column-width) + ($grid-gutter-width * ($grid-columns - 1)) !default;
 
 // 1200px min
-$gridColumnWidth1200:     70px !default;
-$gridGutterWidth1200:     30px !default;
-$gridRowWidth1200:        ($gridColumns * $gridColumnWidth1200) + ($gridGutterWidth1200 * ($gridColumns - 1)) !default;
+$grid-column-width-1200:     70px !default;
+$grid-gutter-width-1200:     30px !default;
+$grid-row-width-1200:        ($grid-columns * $grid-column-width-1200) + ($grid-gutter-width-1200 * ($grid-columns - 1)) !default;
 
 // 768px-979px
-$gridColumnWidth768:      42px !default;
-$gridGutterWidth768:      20px !default;
-$gridRowWidth768:         ($gridColumns * $gridColumnWidth768) + ($gridGutterWidth768 * ($gridColumns - 1)) !default;
+$grid-column-width-768:      42px !default;
+$grid-gutter-width-768:      20px !default;
+$grid-row-width-768:         ($grid-columns * $grid-column-width-768) + ($grid-gutter-width-768 * ($grid-columns - 1)) !default;
 
 
 // Fluid grid
 // -------------------------
-$fluidGridColumnWidth:    percentage($gridColumnWidth/$gridRowWidth) !default;
-$fluidGridGutterWidth:    percentage($gridGutterWidth/$gridRowWidth) !default;
+$fluid-grid-column-width:    percentage($grid-column-width/$grid-row-width) !default;
+$fluid-grid-gutter-width:    percentage($grid-gutter-width/$grid-row-width) !default;
 
 // 1200px min
-$fluidGridColumnWidth1200:     percentage($gridColumnWidth1200/$gridRowWidth1200) !default;
-$fluidGridGutterWidth1200:     percentage($gridGutterWidth1200/$gridRowWidth1200) !default;
+$fluid-grid-column-width-1200:     percentage($grid-column-width-1200/$grid-row-width-1200) !default;
+$fluid-grid-gutter-width-1200:     percentage($grid-gutter-width-1200/$grid-row-width-1200) !default;
 
 // 768px-979px
-$fluidGridColumnWidth768:      percentage($gridColumnWidth768/$gridRowWidth768) !default;
-$fluidGridGutterWidth768:      percentage($gridGutterWidth768/$gridRowWidth768) !default;
+$fluid-grid-column-width-768:      percentage($grid-column-width-768/$grid-row-width-768) !default;
+$fluid-grid-gutter-width-768:      percentage($grid-gutter-width-768/$grid-row-width-768) !default;
