--- a/lib/_wells.scss
+++ b/lib/_wells.scss
@@ -8,9 +8,9 @@
   min-height: 20px;
   padding: 19px;
   margin-bottom: 20px;
-  background-color: $wellBackground;
-  border: 1px solid darken($wellBackground, 7%);
-  @include border-radius($baseBorderRadius);
+  background-color: $well-bg;
+  border: 1px solid darken($well-bg, 7%);
+  @include border-radius($border-radius-base);
   @include box-shadow(inset 0 1px 1px rgba(0,0,0,.05));
   blockquote {
     border-color: #ddd;
@@ -21,9 +21,9 @@
 // Sizes
 .well-large {
   padding: 24px;
-  @include border-radius($borderRadiusLarge);
+  @include border-radius($border-radius-large);
 }
 .well-small {
   padding: 9px;
-  @include border-radius($borderRadiusSmall);
+  @include border-radius($border-radius-small);
 }
